--- a/templates/superwerker.template.yaml
+++ b/templates/superwerker.template.yaml
@@ -111,7 +111,7 @@ Parameters:
     ConstraintDescription: The Quick Start bucket name can include numbers, lowercase
       letters, uppercase letters, and hyphens (-). It cannot start or end with a
       hyphen (-).
-    Default: aws-quickstart
+    Default: aws-ia-us-east-1
     Description: Name of the S3 bucket for your copy of the Quick Start assets.
       Keep the default name unless you are customizing the template.
       Changing the name updates code references to point to a new Quick
@@ -131,7 +131,7 @@ Parameters:
     AllowedPattern: '^([0-9a-zA-Z-.:]+/)*$'
     ConstraintDescription: The Quick Start S3 key prefix can include numbers, lowercase letters,
       uppercase letters, hyphens (-), colon (:), and forward slashes (/).
-    Default: quickstart-superwerker/
+    Default: cfn-ps-superwerker/
     Description: S3 key prefix that is used to simulate a directory for your copy of the
       Quick Start assets. Keep the default prefix unless you are customizing
       the template. Changing this prefix updates code references to point to
@@ -142,7 +142,7 @@ Parameters:
     Type: String
 
 Conditions:
-  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-quickstart']
+  UsingDefaultBucket: !Equals [!Ref QSS3BucketName, 'aws-ia-us-east-1']
   IncludeNotifications: !Not [!Equals [ !Ref NotificationsMail, '' ]]
   IncludeBudget: !Equals [ !Ref IncludeBudget, 'Yes' ]
   IncludeGuardDuty: !Equals [ !Ref IncludeGuardDuty, 'Yes' ]
