Added exception for EIAM rules

--- a/templates/budget.yaml
+++ b/templates/budget.yaml
@@ -1,121 +1,58 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
 Description: Sets up Budget pieces for account management. (qs-1s3rsr7io)
-
 Metadata:
   SuperwerkerVersion: 0.13.2
   cfn-lint:
     config:
       ignore_checks:
         - E9007
-
 Parameters:
   BudgetLimitInUSD:
     Default: 100
     Description: Initial value. Will be overwritten by the scheduled lambda function.
     Type: String
-
 Resources:
   BudgetAlarm:
     Type: AWS::CloudWatch::Alarm
     Properties:
       AlarmActions:
-        - !Sub arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:opsitem:3#CATEGORY=Cost # severity 3 (~medium) should suffice
+        - Fn::Sub: arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:opsitem:3#CATEGORY=Cost
       AlarmDescription: Superwerker default budget forecast exceed previous three months
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: TopicName
-          Value: !GetAtt BudgetNotification.TopicName
+          Value:
+            Fn::GetAtt:
+              - BudgetNotification
+              - TopicName
       EvaluationPeriods: 1
       MetricName: NumberOfMessagesPublished
       Namespace: AWS/SNS
-      Period: 300 # publishing window of SNS metrics to CW
+      Period: 300
       Statistic: Sum
       Threshold: 0
-      TreatMissingData: missing # currently CW does not auto close ops items where it's alert transitions back to OK - but still transition back after one (1) initial SNS notification from budgets to "Ok" would communicate wrong semantics;
-
+      TreatMissingData: missing
   BudgetLambda:
     Type: AWS::Serverless::Function
     Properties:
       Environment:
         Variables:
-          StackName: !Sub ${AWS::StackName}
+          StackName:
+            Fn::Sub: ${AWS::StackName}
       Events:
         Schedule:
           Type: Schedule
           Properties:
             Schedule: cron(0 0 L * ? *)
       Handler: index.handler
-      InlineCode: |
-        from dateutil.relativedelta import *
-        import boto3
-        import datetime
-        import json
-        import os
-
-        def handler(event, context):
-
-          ce = boto3.client('ce')
-
-          end = datetime.date.today().replace(day=1)
-          start = end + relativedelta(months=-3)
-
-          start = start.strftime("%Y-%m-%d")
-          end = end.strftime("%Y-%m-%d")
-
-          response = ce.get_cost_and_usage(
-              Granularity='MONTHLY',
-              Metrics=[
-                  'UnblendedCost',
-              ],
-              TimePeriod={
-                  'Start': start,
-                  'End': end,
-              },
-          )
-
-          avg = 0
-
-          for result in response['ResultsByTime']:
-              total = result['Total']
-              cost = total['UnblendedCost']
-              amount = int(float(cost['Amount']))
-              avg = avg + amount
-
-          avg = int(avg/3)
-          budget = str(avg)
-
-          stack_name = os.environ['StackName']
-
-          log({
-              'average': avg,
-              'budget': budget,
-              'end': end,
-              'event': event,
-              'level': 'debug',
-              'stack': stack_name,
-              'start': start,
-          })
-
-          cf = boto3.client('cloudformation')
-
-          cf.update_stack(
-            Capabilities=[
-              'CAPABILITY_IAM',
-            ],
-            Parameters=[
-              {
-                'ParameterKey': 'BudgetLimitInUSD',
-                'ParameterValue': budget,
-              }
-            ],
-            StackName=stack_name,
-            UsePreviousTemplate=True,
-          )
-
-        def log(msg):
-          print(json.dumps(msg), flush=True)
-
+      InlineCode: "from dateutil.relativedelta import *\nimport boto3\nimport datetime\nimport json\nimport os\n\ndef handler(event, context):\n\n  ce = boto3.client('ce')\n\n  end = datetime.date.today().replace(day=1)\n\
+        \  start = end + relativedelta(months=-3)\n\n  start = start.strftime(\"%Y-%m-%d\")\n  end = end.strftime(\"%Y-%m-%d\")\n\n  response = ce.get_cost_and_usage(\n      Granularity='MONTHLY',\n   \
+        \   Metrics=[\n          'UnblendedCost',\n      ],\n      TimePeriod={\n          'Start': start,\n          'End': end,\n      },\n  )\n\n  avg = 0\n\n  for result in response['ResultsByTime']:\n\
+        \      total = result['Total']\n      cost = total['UnblendedCost']\n      amount = int(float(cost['Amount']))\n      avg = avg + amount\n\n  avg = int(avg/3)\n  budget = str(avg)\n\n  stack_name\
+        \ = os.environ['StackName']\n\n  log({\n      'average': avg,\n      'budget': budget,\n      'end': end,\n      'event': event,\n      'level': 'debug',\n      'stack': stack_name,\n      'start':\
+        \ start,\n  })\n\n  cf = boto3.client('cloudformation')\n\n  cf.update_stack(\n    Capabilities=[\n      'CAPABILITY_IAM',\n    ],\n    Parameters=[\n      {\n        'ParameterKey': 'BudgetLimitInUSD',\n\
+        \        'ParameterValue': budget,\n      }\n    ],\n    StackName=stack_name,\n    UsePreviousTemplate=True,\n  )\n\ndef log(msg):\n  print(json.dumps(msg), flush=True)\n"
       Runtime: python3.7
       Policies:
         - Version: 2012-10-17
@@ -127,16 +64,16 @@ Resources:
             - Effect: Allow
               Action:
                 - budgets:ModifyBudget
-              Resource: !Sub arn:${AWS::Partition}:budgets::${AWS::AccountId}:budget/${BudgetReport}
+              Resource:
+                Fn::Sub: arn:${AWS::Partition}:budgets::${AWS::AccountId}:budget/${BudgetReport}
             - Effect: Allow
               Action:
                 - cloudformation:UpdateStack
-              Resource: !Sub ${AWS::StackId}
+              Resource:
+                Fn::Sub: ${AWS::StackId}
       Timeout: 10
-
   BudgetNotification:
     Type: AWS::SNS::Topic
-
   BudgetNotificationPolicy:
     Type: AWS::SNS::TopicPolicy
     Properties:
@@ -146,16 +83,17 @@ Resources:
           Effect: Allow
           Principal:
             Service: budgets.amazonaws.com
-          Resource: !Ref BudgetNotification
+          Resource:
+            Ref: BudgetNotification
       Topics:
-        - !Ref BudgetNotification
-
+        - Ref: BudgetNotification
   BudgetReport:
     Type: AWS::Budgets::Budget
     Properties:
       Budget:
         BudgetLimit:
-          Amount: !Ref BudgetLimitInUSD
+          Amount:
+            Ref: BudgetLimitInUSD
           Unit: USD
         BudgetType: COST
         CostTypes:
@@ -169,4 +107,6 @@ Resources:
             Threshold: 100
           Subscribers:
             - SubscriptionType: SNS
-              Address: !Ref BudgetNotification
+              Address:
+                Ref: BudgetNotification
+Outputs: {}
